[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Title.gd" type="Script" id=1]
[ext_resource path="res://scenes/Opening.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/img/Inicio/Enter.png" type="Texture" id=3]
[ext_resource path="res://assets/img/grim fate logo glow.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Blink Faster"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Placeholder:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="OpeningScene" parent="." instance=ExtResource( 2 )]

[node name="PressStart" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 530.867, 516.571 )
scale = Vector2( 0.378274, 0.378274 )
texture = ExtResource( 3 )

[node name="AnimPressStart" type="AnimationPlayer" parent="PressStart"]
anims/Blink = SubResource( 1 )
"anims/Blink Faster" = SubResource( 2 )

[node name="AnimTitle" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 3 )

[node name="Placeholder" type="Sprite" parent="."]
position = Vector2( 516.633, 59.8666 )
z_index = 1
texture = ExtResource( 4 )
